force-app/main/default/objects/Metadata_Forms__mdt/Metadata_Forms__mdt.object-meta.xml
<CustomObject>
    <label>Metadata Component Settings</label>
    <pluralLabel>Metadata Component Settings</pluralLabel>
</CustomObject>