force-app/main/default/objects/Metadata_Forms__mdt/fields/PBS_Custom_Visibility__c.field-meta.xml
<CustomField>
    <fullName>PBS_Custom_Visibility__c</fullName>
    <label>Custom Visibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>