force-app/main/default/objects/Metadata_Forms__mdt/fields/PBS_Default_Value__c.field-meta.xml
<CustomField>
    <fullName>PBS_Default_Value__c</fullName>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>