force-app/main/default/objects/Metadata_Forms__mdt/fields/PBS_Is_Required__c.field-meta.xml
<CustomField>
    <fullName>PBS_Is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>