force-app/main/default/objects/Metadata_Forms__mdt/fields/PBS_Line_Break_Before__c.field-meta.xml
<CustomField>
    <fullName>PBS_Line_Break_Before__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Line Break Before</label>
    <type>Checkbox</type>
</CustomField>