force-app/main/default/objects/Metadata_Forms__mdt/fields/PBS_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>PBS_Placeholder__c</fullName>
    <label>Placeholder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>